--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.0",
+    "@stripe/react-stripe-js": "^2.1.1",
+    "@stripe/stripe-js": "^1.54.2",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
-    "react-router-dom": "^6.13.0"
+    "react-router-dom": "^6.13.0",
+    "stripe": "^12.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
