--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "exports": {
+    "./functions/*": "./functions/*"
+  },
+  "commonjs": {
+    "include": [
+      "functions/*"
+    ]
+  },
   "scripts": {
     "start": "vite",
     "build": "vite build",
@@ -27,6 +35,9 @@
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
+    "eslint-plugin-commonjs": "^1.0.2",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
