--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@auth0/auth0-react": "^2.2.0",
     "@stripe/react-stripe-js": "^2.1.1",
     "@stripe/stripe-js": "^1.54.2",
+    "@supabase/supabase-js": "^2.49.1",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "json-server": "^1.0.0-beta.3",
