--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "start": "vite",
+    "seed": "node src/seed.js",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
@@ -24,7 +25,7 @@
     "@stripe/stripe-js": "^1.54.2",
     "@supabase/supabase-js": "^2.49.1",
     "axios": "^1.4.0",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.7",
     "json-server": "^1.0.0-beta.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
